--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/material-top-tabs": "^7.0.6",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/stack": "^7.0.4",
     "expo": "~52.0.7",
@@ -16,10 +17,12 @@
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.2.0",
-    "react-native-svg": "^15.9.0"
+    "react-native-svg": "^15.9.0",
+    "react-native-tab-view": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
